--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html {
 }
 
 body {
-  background-image: url("bg.jpeg");
+  background-image: wheat;
   background-size: 100%;
   background-repeat: repeat;
   font-family: ;
